rabote se i so postgre i so h2 + filter ima

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/lab
+spring.datasource.url=jdbc:postgresql://localhost:5432/vp1
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=Kristina99!
 
 
 ## default connection pool
@@ -11,5 +11,5 @@ spring.datasource.hikari.maximumPoolSize=5
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
